--- a/main.html
+++ b/main.html
@@ -10,6 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<nav>
+		<ul>
+			<li><a href="https://picsum.photos/id/123/200/300"></a>Home</li>
+			
+			<li><a href="https://picsum.photos/id/124/200/300"></a>About us</li>
+			<li><a href="https://picsum.photos/id/125/200/300"></a>Contact us</li>
+		</ul>
+	</nav>
+	<section>
+		<ul>
+			<alt>img/numbers-01.jpg</alt>
+		</ul>
+	</section>
 
 </body>
 
