--- a/main.html
+++ b/main.html
@@ -21,6 +21,8 @@
 	<section>
 		<ul>
 			<alt>img/numbers-01.jpg</alt>
+			<alt>img/numbers-02.jpg</alt>
+			<alt>img/numbers-03.jpg</alt>
 		</ul>
 	</section>
 
