--- a/main.html
+++ b/main.html
@@ -12,19 +12,14 @@
 </script>
 	<nav>
 		<ul>
-			<li><a href="https://picsum.photos/id/123/200/300"></a>Home</li>
+			<li><img src="https://picsum.photos/id/123/200/300" alt="1">Home</li>
 			
-			<li><a href="https://picsum.photos/id/124/200/300"></a>About us</li>
-			<li><a href="https://picsum.photos/id/125/200/300"></a>Contact us</li>
+			<li><img src="https://picsum.photos/id/124/200/300" alt ="2">About us</li>
+			<li><img src="https://picsum.photos/id/125/200/300" alt="3">Contact us</li>
 		</ul>
 	</nav>
-	<section>
-		<ul>
-			<alt>img/numbers-01.jpg</alt>
-			<alt>img/numbers-02.jpg</alt>
-			<alt>img/numbers-03.jpg</alt>
-		</ul>
-	</section>
+	
+
 
 </body>
 
